--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@morlz/motion",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"main": "./dist/motion.min.js",
 	"keywords": [
 		"vue",
@@ -18,7 +18,8 @@
 	"scripts": {
 		"dev": "parcel ./src/demo/index.html --out-dir serve",
 		"start": "npm run dev",
-		"build": "parcel build ./src/lib/index.js --out-file motion.min.js --no-source-maps"
+		"build": "parcel build ./src/lib/index.js --out-file motion.min.js",
+		"demo": "npm run build && npm run dev"
 	},
 	"dependencies": {
 		"@babel/runtime": "^7.1.5",
