--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "@morlz/motion",
-	"version": "0.0.3",
-	"main": "./dist/motion.min.js",
+	"version": "0.0.4",
+	"main": "./dist/motion.min.umd.js",
 	"keywords": [
 		"vue",
 		"motion",
@@ -9,7 +9,7 @@
 		"morlz"
 	],
 	"files": [
-		"dist/motion.min.js"
+		"dist/motion.min.umd.js"
 	],
 	"license": "MIT",
 	"description": "Vue directives for transition components between routes",
@@ -18,11 +18,11 @@
 	"scripts": {
 		"dev": "parcel ./src/demo/index.html --out-dir serve",
 		"start": "npm run dev",
-		"build": "parcel build ./src/lib/index.js --out-file motion.min.js",
+		"build": "microbundle --entry ./src/lib/index.js --target browser --format umd --name @morlz/motion",
+		"build:parcel": "parcel build ./src/lib/index.js --out-file motion.min.js",
 		"demo": "npm run build && npm run dev"
 	},
 	"dependencies": {
-		"@babel/runtime": "^7.1.5",
 		"core-js": "^2.5.7",
 		"dom-css": "^2.1.0",
 		"popmotion": "^8.5.2"
@@ -31,22 +31,21 @@
 		"@babel/core": "^7.0.0-0",
 		"@babel/plugin-transform-runtime": "^7.1.0",
 		"@babel/preset-env": "^7.1.6",
+		"@babel/runtime": "^7.1.5",
 		"@vue/component-compiler-utils": "^2.3.0",
 		"autoprefixer": "^9.3.1",
 		"babel-plugin-module-resolver": "^3.1.1",
-		"babel-plugin-syntax-dynamic-import": "^6.18.0",
-		"babel-plugin-transform-async-to-generator": "^6.24.1",
-		"babel-plugin-transform-runtime": "^6.23.0",
+		"microbundle": "^0.7.0",
+		"parcel-bundler": "^1.10.3",
 		"postcss-import": "^12.0.1",
 		"postcss-url": "^8.0.0",
+		"regenerator-runtime": "^0.13.1",
 		"stylus": "^0.54.5",
-		"vue-template-compiler": "^2.5.17",
+		"vue": "^2.5.17",
 		"vue-hot-reload-api": "^2.3.1",
 		"vue-router": "^3.0.1",
-		"vuex": "^3.0.1",
-		"vue": "^2.5.17",
-		"regenerator-runtime": "^0.13.1",
-		"parcel-bundler": "^1.10.3"
+		"vue-template-compiler": "^2.5.17",
+		"vuex": "^3.0.1"
 	},
 	"engines": {
 		"node": ">= 10.0.0",
